Frontend improvements, navbarspacing fixed, user profile page made nicer

--- a/static/masterstyle.css
+++ b/static/masterstyle.css
@@ -2,10 +2,14 @@
    padding-top: 70px;
  }
 
+.btn-primary {
+  margin-top: 20px;
+}
+
 /* descendant selector for form stuff */
 form * {
 
-	
+
 
 
 }
